test/scc/ext/tm/semantic-errors/018.a
018.t:4:9: error: volatile objects cannot be used within _Transaction_safe function